--- a/public/styles/site/_layout.scss
+++ b/public/styles/site/_layout.scss
@@ -18,3 +18,8 @@
 .request-feedback{
 	text-align: center;
 }
+
+.logo-horizontal{
+	background: url('../images/logo-vertical.png') 50% 100px no-repeat fixed;
+  	background-size: cover;
+}
