--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -1,5 +1,5 @@
 {{!< default}}
 <div class="container">
-		<h1>PRM Solutions</h1>
+		<img class="img-responsive" src="../images/logo-horizontal.png">
 	</div>
 </div>
