--- a/templates/views/request.hbs
+++ b/templates/views/request.hbs
@@ -1,34 +1,59 @@
 <div class="container">
-	<h1>Send us your request</h1>
-</div>
-<div class="container">
 	<div class="row">
 		<div class="col-sm-8 col-md-6 col-md-offset-3">
-			{{#if enquirySubmitted}}
+			{{#if requestSubmitted}}
 			<h3 class="request-feedback">We'll get back to you soon!</h3>
 			{{else}}
 			<form method="post">
-				<input type="hidden" name="action" value="contact">
+				<input type="hidden" name="action" value="request">
+				<input type="hidden" name="creator" value="{{user._id}}">
 				<div class="form-group {{#if validationErrors.name}}has-error{{/if}}">
-					<label>who are you?</label>
-					<input type="text" name="name.full"  class="form-control" value="{{formData.[name.full]}}">
+					<label>name your request</label>
+					<input type="text" name="name"  class="form-control" value="{{formData.name}}">
 				</div>
-				<div class="form-group {{#if validationErrors.email}}has-error{{/if}}">
-					<label>what's your email?</label>
-					<input type="email" name="email" class="form-control" value="{{formData.email}}">
-				</div>
-				<div class="form-group {{#if validationErrors.enquiryType}}has-error{{/if}}">
+				<div class="form-group {{#if validationErrors.priority}}has-error{{/if}}">
 					<label>how critical is your request?</label>
-					<select name="enquiryType" class="form-control">
+					<select name="priority" class="form-control">
 						<option value="">(select one)</option>
-						{{#each enquiryTypes}}
+						{{#each requestPriorities}}
 						<option value="{{value}}">{{label}}</option>
 						{{/each}}
 					</select>
 				</div>
-				<div class="form-group {{#if validationErrors.message}}has-error{{/if}} ">
+				<div class="form-group {{#if validationErrors.reqType}}has-error{{/if}}">
+					<label>what sort of request is it?</label>
+					<select name="type" class="form-control">
+						<option value="">(select one)</option>
+						{{#each requestTypes}}
+						<option value="{{value}}">{{label}}</option>
+						{{/each}}
+					</select>
+				</div>
+				<div class="form-group {{#if validationErrors.reqFormat}}has-error{{/if}}">
+					<label>what type of output do you need?</label>
+					<select name="format" class="form-control">
+						<option value="">(select one)</option>
+						{{#each requestFormats}}
+						<option value="{{value}}">{{label}}</option>
+						{{/each}}
+					</select>
+				</div>
+				<div class="form-group {{#if validationErrors.reqFrequency}}has-error{{/if}}">
+					<label>how often do you need the output?</label>
+					<select name="frequency" class="form-control">
+						<option value="">(select one)</option>
+						{{#each requestFrequencies}}
+						<option value="{{value}}">{{label}}</option>
+						{{/each}}
+					</select>
+				</div>
+				<div class="form-group {{#if validationErrors.description}}has-error{{/if}} ">
 					<label>describe your request</label>
-					<textarea name="message" placeholder="Leave us a message..." rows="4" class="form-control">{{formData.message}}</textarea>
+					<textarea name="description" placeholder="describe your request..." rows="4" class="form-control">{{formData.description}}</textarea>
+				</div>
+				<div class="form-group {{#if validationErrors.benefit}}has-error{{/if}} ">
+					<label>how and who will it benefit</label>
+					<textarea name="benefit" placeholder="describe the benefit..." rows="4" class="form-control">{{formData.benefit}}</textarea>
 				</div>
 				<div class="form-actions">
 					<button type="submit" class="btn btn-primary">Send</button>
