--- a/public/styles/site.scss
+++ b/public/styles/site.scss
@@ -20,3 +20,6 @@
 
 // Add your own site style includes here
 @import "site/layout";
+
+//fonts
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro');
