--- a/templates/views/layouts/default.hbs
+++ b/templates/views/layouts/default.hbs
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<title>requests</title>
+		<title>Requests</title>
 		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 		<link href="/styles/site.css" rel="stylesheet">
 
@@ -30,7 +30,7 @@
 								<span class="sr-only">Toggle navigation</span>
 								<span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 							</button>
-							<a href="/" class="navbar-brand">Request App</a>
+							<a href="/" class="navbar-brand">Requests App</a>
 						</div>
 						<div class="collapse navbar-collapse">
 							<ul class="nav navbar-nav navbar-left">
@@ -42,10 +42,12 @@
 							</ul>
 							<ul class="nav navbar-nav navbar-right">
 								{{#if user}}
+								<li class="user-name"><a href="/"><b>Welcome {{user.name.first}}  </b></a></li>
 								<li><a href="/keystone/signout">Sign Out</a></li>
 								{{else}}
 								<li><a href="/keystone/signin">Sign In</a></li>
 								{{/if}}
+
 							</ul>
 						</div>
 					</div>
@@ -86,9 +88,10 @@
 		</div>
 		<div class="container">
 			<div id="footer">
-				<p>PRM Intelligence and Solutions</p>
+				{{!-- <p>PRM Intelligence and Solutions</p> --}}
 			</div>
 		</div>
+
 		{{!--
 			//- jQuery 1.11.3 is included by default, and required by both Bootstrap
 			//- and the KeystoneJS Content Editor. If you are not targeting IE8,
@@ -100,6 +103,13 @@
 			//- them specifically here, instead of bootstrap-3.3.5.min.js
 		--}}
 		<script src="/js/bootstrap/bootstrap-3.3.5.min.js"></script>
+
 		{{{isAdminEditorJS user}}}
+		<script type="text/javascript">
+		$(function() {
+			//$('auth-footer').css('display', 'none');
+			console.log("ready");
+		});
+		</script>
 	</body>
 </html>
