--- a/public/styles/site/_layout.scss
+++ b/public/styles/site/_layout.scss
@@ -45,3 +45,8 @@ body {
 .user-name{
 	//border-right: 0.5px solid #e7e7e7;
 }
+.request-description{
+	resize: none;
+	height: 200px !important;
+	margin-bottom: 20px;
+}
