--- a/templates/views/assignment.hbs
+++ b/templates/views/assignment.hbs
@@ -2,8 +2,18 @@
 	<div class="row">
 		<div class="col-md-10 col-md-offset-1">
 			<h4>{{assignment.name}}</h4>
-		  	<div class="panel-body"><b>Description: </b>{{assignment.description}}</div>
-			{{#ifeq 'open' assignment.status}}
+		  	<div class="panel-body"><b>Description: </b></div>
+			<div class="form-group">
+				<textarea readonly rows="4" class="form-control request-description">
+					{{assignment.description}}
+				</textarea>
+			<div class="">
+
+			</div>
+			{{#ifeq 'closed' assignment.status}}
+			{{!-- nothign to show --}}
+			{{else}}
+
 			<form method="post">
 				<input type="hidden" name="action" value="completed">
 				<button type="submit" class="btn btn-success">Completed</button>
