--- a/templates/views/assignment.hbs
+++ b/templates/views/assignment.hbs
@@ -4,9 +4,7 @@
 			<h4>{{assignment.name}}</h4>
 		  	<div class="panel-body"><b>Description: </b></div>
 			<div class="form-group">
-				<textarea readonly rows="4" class="form-control request-description">
-					{{assignment.description}}
-				</textarea>
+				<textarea readonly rows="4" class="form-control request-description">{{assignment.description}}</textarea>
 			<div class="">
 
 			</div>
