--- a/templates/views/assignment.hbs
+++ b/templates/views/assignment.hbs
@@ -5,7 +5,7 @@
 				<div class="panel-heading">{{assignment.name}}</div>
 				<div class="panel-body">
 					<p><b>Description:</b> {{assignment.description}}</p>
-					<p><b>Format:</b> {{assignment.format}}</p>
+					<p><b>Type:</b> {{assignment.type}}</p>
 					<p><b>Frequency:</b> {{assignment.frequency}}</p>
 					<p><b>Benefit:</b> {{assignment.benefit}}</p>
 				</div>
