--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -1,5 +1,2 @@
 {{!< default}}
-<div class="container">
-		<img class="img-responsive landing-logo" src="../images/logo-horizontal.png">
-	</div>
-</div>
+{{!--  show team-board --}}
