--- a/templates/views/layouts/default.hbs
+++ b/templates/views/layouts/default.hbs
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<title>Requests</title>
+		<title>PRM HUB</title>
 		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 		<link href="/styles/site.css" rel="stylesheet">
 
@@ -30,7 +30,7 @@
 								<span class="sr-only">Toggle navigation</span>
 								<span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 							</button>
-							<a href="/" class="navbar-brand">Requests App</a>
+							<a href="/" class="navbar-brand">PRM HUB</a>
 						</div>
 						<div class="collapse navbar-collapse">
 							<ul class="nav navbar-nav navbar-left">
@@ -86,11 +86,18 @@
 			<!-- The content block should contain the body of your template's content-->
 			{{{body}}}
 		</div>
+
 		<div class="container">
 			<div id="footer">
 				{{!-- <p>PRM Intelligence and Solutions</p> --}}
 			</div>
 		</div>
+
+		<div class="container">
+				<img class="img-responsive landing-logo" src="../images/logo-horizontal.png">
+			</div>
+		</div>
+
 
 		{{!--
 			//- jQuery 1.11.3 is included by default, and required by both Bootstrap
