added feedback message on succes request

--- a/public/styles/site/_layout.scss
+++ b/public/styles/site/_layout.scss
@@ -50,3 +50,11 @@ body {
 	height: 200px !important;
 	margin-bottom: 20px;
 }
+
+.alert-success {
+    text-align: center;
+}
+
+.request-form{
+	text-align: center;
+}
