--- a/templates/views/request.hbs
+++ b/templates/views/request.hbs
@@ -1,8 +1,9 @@
 <div class="container">
 	<div class="row">
-		<div class="col-sm-8 col-md-6 col-md-offset-3">
+		<div class="col-sm-8 col-md-6 col-md-offset-3 request-form">
+
 			{{#if requestSubmitted}}
-			<h3 class="request-feedback">We'll get back to you soon!</h3>
+				<img src="../images/hero.png" class="img-thumbnail" alt="Cinque Terre">
 			{{else}}
 			<form method="post">
 				<input type="hidden" name="action" value="request">
