--- a/templates/views/request.hbs
+++ b/templates/views/request.hbs
@@ -1,77 +1,81 @@
 <div class="container">
 	<div class="row">
-		<div class="col-sm-8 col-md-6 col-md-offset-3 request-form">
 
-			{{#if requestSubmitted}}
+		{{#if requestSubmitted}}
+			<div class="col-sm-8 col-md-6 col-md-offset-4 request-form">
 				<img src="../images/hero.png" class="img-thumbnail" alt="Cinque Terre">
-			{{else}}
-			<form method="post">
-				<input type="hidden" name="action" value="request">
-				<input type="hidden" name="client" value="{{user._id}}">
-				<div class="form-group col-md-6 {{#if validationErrors.name}}has-error{{/if}}">
-					<label>Name your request</label>
-					<input type="text" name="name"  class="form-control" value="{{formData.name}}">
-				</div>
-				<div class="form-group col-md-6 {{#if validationErrors.priority}}has-error{{/if}}">
-					<label>How critical is your request?</label>
-					<select name="priority" class="form-control">
+			</div>
+		{{else}}
+			<div class="col-sm-8 col-md-6 col-md-offset-3 request-form">
+				<form method="post">
+					<input type="hidden" name="action" value="request">
+					<input type="hidden" name="client" value="{{user._id}}">
+					<div class="form-group col-md-6 {{#if validationErrors.name}}has-error{{/if}}">
+						<label>Name your request</label>
+						<input type="text" name="name" class="form-control" value="{{formData.name}}">
+					</div>
+					<div class="form-group col-md-6 {{#if validationErrors.priority}}has-error{{/if}}">
+						<label>How critical is your request?</label>
+						<select name="priority" class="form-control">
 						<option value="">(select one)</option>
 						{{#each requestPriorities}}
 						<option value="{{value}}">{{label}}</option>
 						{{/each}}
 					</select>
-				</div>
-				<div class="form-group col-md-6 {{#if validationErrors.reqType}}has-error{{/if}}">
-					<label>What sort of request is it?</label>
-					<select name="type" class="form-control">
+					</div>
+					<div class="form-group col-md-6 {{#if validationErrors.reqType}}has-error{{/if}}">
+						<label>What sort of request is it?</label>
+						<select name="type" class="form-control">
 						<option value="">(select one)</option>
 						{{#each requestTypes}}
 						<option value="{{value}}">{{label}}</option>
 						{{/each}}
 					</select>
-				</div>
-				{{!-- <div class="form-group {{#if validationErrors.reqFormat}}has-error{{/if}}">
-					<label>What type of output do you need?</label>
-					<select name="format" class="form-control">
+					</div>
+					{{!-- <div class="form-group {{#if validationErrors.reqFormat}}
+					has-error{{/if}}">
+						<label>What type of output do you need?</label>
+						<select name="format" class="form-control">
 						<option value="">(select one)</option>
 						{{#each requestFormats}}
 						<option value="{{value}}">{{label}}</option>
 						{{/each}}
 					</select>
-				</div> --}}
-				<div class="form-group col-md-6 {{#if validationErrors.reqFrequency}}has-error{{/if}}">
-					<label>How often do you need the output?</label>
-					<select name="frequency" class="form-control">
+			</div> --}}
+			<div class="form-group col-md-6 {{#if validationErrors.reqFrequency}}has-error{{/if}}">
+				<label>How often do you need the output?</label>
+				<select name="frequency" class="form-control">
 						<option value="">(select one)</option>
 						{{#each requestFrequencies}}
 						<option value="{{value}}">{{label}}</option>
 						{{/each}}
 					</select>
-				</div>
-				<div class="form-group col-md-12 {{#if validationErrors.description}}has-error{{/if}} ">
-					<label>Describe your request</label>
-					<textarea name="description" placeholder="describe your request..." rows="4" class="form-control">{{formData.description}}</textarea>
-				</div>
-				<div class="form-group col-md-12 {{#if validationErrors.benefit}}has-error{{/if}} ">
-					<label>How and who will it benefit</label>
-					<textarea name="benefit" placeholder="describe the benefit..." rows="4" class="form-control">{{formData.benefit}}</textarea>
-				</div>
-				<div class="form-group col-md-12 {{#if validationErrors.reqFormat}}has-error{{/if}}">
-					<label>Which team should work on this?</label>
-					<select name="team" class="form-control">
+			</div>
+			<div class="form-group col-md-12 {{#if validationErrors.description}}has-error{{/if}} ">
+				<label>Describe your request</label>
+				<textarea name="description" placeholder="describe your request..." rows="4" class="form-control">{{formData.description}}</textarea>
+			</div>
+			<div class="form-group col-md-12 {{#if validationErrors.benefit}}has-error{{/if}} ">
+				<label>How and who will it benefit</label>
+				<textarea name="benefit" placeholder="describe the benefit..." rows="4" class="form-control">{{formData.benefit}}</textarea>
+			</div>
+			<div class="form-group assigned-team col-md-12 {{#if validationErrors.reqFormat}}has-error{{/if}}">
+				<label>Which team should work on this?</label>
+				<select name="team" class="form-control">
 						{{!-- <option value="1">PRMIS</option> --}}
 						{{!-- TODO create new default team if none is found--}}
 						{{#each teams}}
 						<option value="{{_id}}">{{name}}</option>
 						{{/each}}
 					</select>
-				</div>
+			</div>
 
-				<div class="form-actions">
-					<button type="submit" class="btn btn-primary">Send</button>
-				</div>
+			<div class="form-actions">
+				<button type="submit" class="btn btn-primary">Send</button>
+			</div>
 			</form>
-			{{/if}}
-		</div>
+
 	</div>
+	{{/if}}
+</div>
 </div>
