--- a/templates/views/request.hbs
+++ b/templates/views/request.hbs
@@ -4,6 +4,7 @@
 		{{#if requestSubmitted}}
 			<div class="col-sm-8 col-md-6 col-md-offset-4 request-form">
 				<img src="../images/hero.png" class="img-thumbnail" alt="Cinque Terre">
+				<span>The current average completion time is 48 hours</span>
 			</div>
 		{{else}}
 			<div class="col-sm-8 col-md-6 col-md-offset-3 request-form">
