--- a/public/styles/site/_layout.scss
+++ b/public/styles/site/_layout.scss
@@ -15,9 +15,7 @@
     height: auto;
 }
 
-.request-feedback{
-	text-align: center;
-}
+
 
 .logo-horizontal{
 	background: url('../images/logo-vertical.png') 50% 100px no-repeat fixed;
@@ -57,6 +55,21 @@ body {
 
 .request-form{
 	//text-align: center;
+	img{
+		margin-left: auto;
+		margin-right: auto;
+		display: block;
+	}
+}
+
+.request-feedback{
+	text-align: center;
+	margin-top: 2% !important;
+}
+
+.col-centered{
+    float: none;
+    margin: 0 auto;
 }
 
 .assigned-team{
