--- a/templates/views/stats.hbs
+++ b/templates/views/stats.hbs
@@ -11,3 +11,20 @@
 		<div id="vizContainer" class="col-sm-6 col-md-10"></div>
 
 </div>
+
+
+<script type="text/javascript">
+  function initViz() {
+	  var containerDiv = document.getElementById("vizContainer"),
+		  url = "https://i2trekviz.somoscopa.com/t/CopaVizHubDevelopment/views/REVENUEGRAPH/REVENUE?iframeSizedToWindow=true&:embed=y&:showAppBanner=false&:display_count=no&:showVizHome=no",
+		  options = {
+			  hideTabs: true,
+			  onFirstInteractive: function() {
+				  console.log("Run this code when the viz has finished loading.");
+			  }
+		  };
+
+	  var viz = new tableau.Viz(containerDiv, url, options);
+	  // Create a viz object and embed it in the container div.
+  }
+  </script>
