--- a/templates/views/stats.hbs
+++ b/templates/views/stats.hbs
@@ -16,7 +16,8 @@
 <script type="text/javascript">
   function initViz() {
 	  var containerDiv = document.getElementById("vizContainer"),
-		  url = "https://i2trekviz.somoscopa.com/t/CopaVizHubDevelopment/views/REVENUEGRAPH/REVENUE?iframeSizedToWindow=true&:embed=y&:showAppBanner=false&:display_count=no&:showVizHome=no",
+		  //url = "",
+		  url = "{{{targetViz}}}",
 		  options = {
 			  hideTabs: true,
 			  onFirstInteractive: function() {
