fixed iframe issue

--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -5880,3 +5880,6 @@ body {
 /*** styles for search form  **/
 .wiki-search {
   padding-bottom: 3%; }
+
+iframe {
+  min-height: 200px !important; }
