--- a/templates/views/sqlWiki.hbs
+++ b/templates/views/sqlWiki.hbs
@@ -6,7 +6,7 @@
 				<div class="col-sm-8">
 					<form class="navbar-form navbar-left" role="search" method="post">
 						<div class="form-group">
-							<input type="text" name="search_input" class="form-control" placeholder="Search">
+							<input type="text" name="search_input" class="form-control" placeholder="Search" value="{{search_input}}">
 							<input type="hidden" name="action" value="search">
 						</div>
 						<button type="submit" class="btn btn-default">Search</button>
@@ -25,8 +25,8 @@
 					<div class="panel-heading">
 						<h3 class="panel-title">{{name}}</h3>
 					</div>
-					<h5>Execution time: {{aprox_exec_minutes}} minutes</h5>
-					<h5>Description: {{description}}</h5>
+					<h5><b>Execution time:</b> {{aprox_exec_minutes}} minutes</h5>
+					<h5><b>Description:</b> {{description}}</h5>
 
 					<pre class="language-sql ">
 					       <code class="language-sql" style="white-space: pre-line;">
