rebrand ACE start

--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -5826,10 +5826,13 @@ button.close {
   margin-top: 30px; }
 
 #footer {
-  margin-top: 30px;
   border-top: 1px solid #eeeeee;
-  padding-top: 30px;
-  color: #777777; }
+  padding: 5px;
+  color: #777777;
+  width: 100%; }
+
+#body {
+  height: 100%; }
 
 .gallery-image img {
   display: block;
@@ -5844,7 +5847,10 @@ body {
   font-family: 'Source Sans Pro', sans-serif; }
 
 .navbar-default .navbar-brand {
-  color: #0060a9; }
+  color: #0060a9;
+  background: url("../images/ACE-short-blue.png") no-repeat right top;
+  background-size: contain;
+  padding-right: 135px; }
 
 .navbar-default .navbar-nav > li > a {
   color: #0060a9; }
@@ -5886,3 +5892,27 @@ iframe {
 
 .panel-default {
   border-color: #fff; }
+
+html, body {
+  height: 100%; }
+
+.landing {
+  background: url("../images/stars.png") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  height: 100%;
+  width: 100%;
+  position: relative; }
+  .landing .ace-caption {
+    padding: 30px 30px 30px 30px;
+    width: 66.66666667%;
+    color: #fff;
+    z-index: 99;
+    position: absolute;
+    right: 0px;
+    bottom: 200px;
+    width: 325px;
+    font-size: 25px;
+    text-align: center; }
