--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -1,2 +1,8 @@
 {{!< default}}
 {{!--  show team-board --}}
+<div class="landing">
+<div class="ace-caption">
+     <p>Improve performance through data and analytics</p>
+
+</div>
+</div>
