--- a/templates/views/myRequests.hbs
+++ b/templates/views/myRequests.hbs
@@ -1,6 +1,24 @@
 <div class="container">
 	<div class="row">
 		<div class="col-sm-8 col-md-8 col-md-offset-2">
+
+			<nav class="navbar navbar-default">
+			  <div class="container-fluid">
+
+
+			    <!-- Collect the nav links, forms, and other content for toggling -->
+			    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+			      <ul class="nav navbar-nav">
+			        <li class="active"><a href="/myRequests">My requests <span class="sr-only">(current)</span></a></li>
+			        <li><a href="/request">New Request</a></li>
+				   <li><a href="/assignments">My assignments</a></li>
+
+			      </ul>
+			 </div><!-- /.navbar-collapse -->
+			  </div><!-- /.container-fluid -->
+			</nav>
+
+
 			{{#if hasRequests}}
 			<div class="panel panel-default">
 			  <!-- Default panel contents -->
