--- a/templates/views/stats.hbs
+++ b/templates/views/stats.hbs
@@ -2,9 +2,9 @@
 	<div class="row">
 		<div class="col-sm-6 col-md-2 ">
 			<ul class="nav nav-pills nav-stacked">
-			  <li role="presentation" class="active"><a href="#">Revenue</a></li>
-			  <li role="presentation"><a href="#">Yield</a></li>
-			  <li role="presentation"><a href="#">Bookings</a></li>
+			  <li role="presentation" class="active"><a href="/stats/revenue">Revenue</a></li>
+			  <li role="presentation"><a href="/stats/yield">Yield</a></li>
+			  <li role="presentation"><a href="/stats/bookings">Bookings</a></li>
 			</ul>
 		</div>
 
