added landing to ACE rebrand

--- a/public/styles/site/_layout.scss
+++ b/public/styles/site/_layout.scss
@@ -37,8 +37,8 @@ body {
 	background: url('../images/ACE-short-blue.png') no-repeat right top;
   	background-size: contain;
 	padding-right: 135px;
-
-
+	padding: 30px 50px;
+	width: 170px;
 }
 .navbar-default .navbar-nav > li > a {
 	color: $copa-blue;
@@ -98,28 +98,46 @@ iframe{
     border-color: #fff;
 
 }
-html,body{height:100%;}
+html,body, .ace-lading {height:100%;}
 
 .landing {
-  background: url('../images/stars.png') no-repeat center center fixed;
+  background: url('../images/stars-bg-01.jpg') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  height: 100%;
   width: 100%;
   position: relative;
   .ace-caption{
-	  padding: 30px 30px 30px 30px;
-        width: 66.66666667%;
-        color: #fff;
-        z-index: 99;
-        position: absolute;
-        right: 0px;
-        bottom: 200px;
-        width: 325px;
-        font-size: 25px;
-	   text-align: center;
+	  padding-left: 30%;
+	  padding-right: 10px;
+	  width: 100%;
+	  height: 100%;
+	  text-align: right;
+	  color: #fff;
+	  @media screen and (min-width: 1200px) {
+		  padding-left: 78%;
+	  }
   }
 
+
+
+}
+.about{
+	p, li{
+	    color: #676262;
+	}
+	h3{
+		color: #0060a9;
+	}
+	.area:last-child{
+		padding-bottom: 100px;
+	}
+	.area{
+		text-align: center;
+		li{
+			text-align: left;
+		}
+
+	}
 }
