--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -1,8 +1,56 @@
 {{!< default}}
 {{!--  show team-board --}}
-<div class="landing">
-<div class="ace-caption">
-     <p>Improve performance through data and analytics</p>
-
-</div>
+<div class="ace-lading">
+	<div class="landing ">
+          <div class="container">
+               <div class="ace-caption">
+     			<h3 class="">Improve performance through data and analytics</h3>
+     		</div>
+          </div>
+	</div>
+	<div class="container about">
+		<h3>What is an Analytics Center of Excellence?</h3>
+		<p>It is a strategic team with the purpose of aligning corporate strategy with business needs while providing knowledge, resources, and guidance to business units to accelerate adoption and value realization from analytics across the enterprise.
+		</p>
+		<hr>
+		<h3>Objectives of ACE</h3>
+		<div class="row">
+			<div class="area col-xs-12 col-md-4">
+                    <img src="../images/analytics.jpg" alt="">
+                    <h4>Add value through analytics</h4>
+                    <ul>
+                         <li>
+                              Accelerate analytics adoption across business functions by enabling self-service analytics and data democratization.
+                         </li>
+                         <li>
+                              Reduce time to value for medium and large analytics projects.
+                         </li>
+                    </ul>
+               </div>
+			<div class="area col-xs-12 col-md-4">
+                    <img src="../images/efficiency.jpg" alt="">
+                    <h4>Create process and efficiency</h4>
+                    <ul>
+                         <li>
+                              Establish governance structures over decisions that affect data management and use case prioritization.
+                         </li>
+                         <li>
+                              Provide support to business areas initiatives to start collecting, extracting and using data for analytics.
+                         </li>
+                    </ul>
+               </div>
+               <div class="area col-xs-12 col-md-4">
+                    <img src="../images/collaboration.jpg" alt="">
+                    <h4>Fill the resource gap through collaboration and talent management</h4>
+                    <ul>
+                         <li>
+                              Ramp-up analytics groups in areas that don't have them yet.
+                         </li>
+                         <li>
+                              Provide support to business areas initiatives to start collecting, extracting and using data for analytics.
+                         </li>
+                    </ul>
+               </div>
+		</div>
+	</div>
 </div>
