--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -5850,7 +5850,9 @@ body {
   color: #0060a9;
   background: url("../images/ACE-short-blue.png") no-repeat right top;
   background-size: contain;
-  padding-right: 135px; }
+  padding-right: 135px;
+  padding: 30px 50px;
+  width: 170px; }
 
 .navbar-default .navbar-nav > li > a {
   color: #0060a9; }
@@ -5893,26 +5895,38 @@ iframe {
 .panel-default {
   border-color: #fff; }
 
-html, body {
+html, body, .ace-lading {
   height: 100%; }
 
 .landing {
-  background: url("../images/stars.png") no-repeat center center fixed;
+  background: url("../images/stars-bg-01.jpg") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  height: 100%;
   width: 100%;
   position: relative; }
   .landing .ace-caption {
-    padding: 30px 30px 30px 30px;
-    width: 66.66666667%;
-    color: #fff;
-    z-index: 99;
-    position: absolute;
-    right: 0px;
-    bottom: 200px;
-    width: 325px;
-    font-size: 25px;
-    text-align: center; }
+    padding-left: 30%;
+    padding-right: 10px;
+    width: 100%;
+    height: 100%;
+    text-align: right;
+    color: #fff; }
+    @media screen and (min-width: 1200px) {
+      .landing .ace-caption {
+        padding-left: 78%; } }
+
+.about p, .about li {
+  color: #676262; }
+
+.about h3 {
+  color: #0060a9; }
+
+.about .area:last-child {
+  padding-bottom: 100px; }
+
+.about .area {
+  text-align: center; }
+  .about .area li {
+    text-align: left; }
