--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -5930,3 +5930,12 @@ html, body, .ace-lading {
   text-align: center; }
   .about .area li {
     text-align: left; }
+
+.training {
+  background: url("../images/training.PNG") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  width: 100%;
+  position: relative; }
