--- a/public/styles/site/_layout.scss
+++ b/public/styles/site/_layout.scss
@@ -141,3 +141,13 @@ html,body, .ace-lading {height:100%;}
 
 	}
 }
+
+.training{
+	background: url('../images/training.PNG') no-repeat center center fixed;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+	width: 100%;
+	position: relative;
+}
