--- a/templates/views/sqlWiki.hbs
+++ b/templates/views/sqlWiki.hbs
@@ -3,13 +3,17 @@
 		<div class="col-sm-8 col-md-8 col-md-offset-2">
 
 			<div class="row">
-				<div class="col-sm-8">
-					<form class="navbar-form navbar-left" role="search" method="post">
-						<div class="form-group">
+				<div class="col-sm-8 col-md-12">
+					<form class="navbar-form" role="search" method="post">
+						<div class="input-group">
 							<input type="text" name="search_input" class="form-control" placeholder="Search" value="{{search_input}}">
 							<input type="hidden" name="action" value="search">
+
+							<span class="input-group-btn">
+						        <button type="submit" class="btn btn-default wiki-send" type="button">Go!</button>
+						     </span>
 						</div>
-						<button type="submit" class="btn btn-default">Search</button>
+
 					</form>
 				</div>
 
