--- a/templates/views/stats.hbs
+++ b/templates/views/stats.hbs
@@ -1,15 +1,16 @@
 <div class="container">
 	<div class="row">
-		<div class="col-sm-6 col-md-2 ">
+		<!--div class="col-sm-6 col-md-2 ">
 			<ul class="nav nav-pills nav-stacked">
 			  <li role="presentation" class="active"><a href="/stats/revenue">Revenue</a></li>
 			  <li role="presentation"><a href="/stats/yield">Yield</a></li>
 			  <li role="presentation"><a href="/stats/bookings">Bookings</a></li>
 			</ul>
-		</div>
+		</div-->
 
-		<div id="vizContainer" class="col-sm-6 col-md-10"></div>
+		<div id="vizContainer" class="col-sm-6 col-md-12"></div>
 
+	</div>
 </div>
 
 
