--- a/templates/views/sqlWiki.hbs
+++ b/templates/views/sqlWiki.hbs
@@ -13,9 +13,14 @@
 						     </span>
 						</div>
 						<div class="">
-							<label class="radio-inline"><input type="radio" name="optradio" checked>Sql</input></label>
-						    	<label class="radio-inline"><input type="radio" name="optradio">Documentation</input>
-						 	</label><input type="radio" name="optradio">Reports</input>
+							<label class="radio-inline" for="sql_button">SQL</label>
+							<input type="radio" name="optradio" id="sql_button" value="sql" />
+
+							<label class="radio-inline" for="doc_button">Documentation</label>
+							<input type="radio" name="optradio" id="doc_button" value="documentation" />
+
+							<label class="radio-inline" for="reports_button">Reports</label>
+							<input type="radio" name="optradio" id="reports_button" value="reports" />
 						</div>
 					</form>
 
